--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,22 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  port: 5432
+  encoding: unicode
+  host: localhost
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: conference_commander_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: conference_commander_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: conference_commander
