Let you override default postgres username royp

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,7 @@ default: &default
   port: 5432
   encoding: unicode
   host: localhost
+  username: <%= ENV['MY_USER'] || ENV['USER'] %>
 
 development:
   <<: *default
