Let you override default postgres password as well.

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,6 +10,7 @@ default: &default
   encoding: unicode
   host: localhost
   username: <%= ENV['MY_USER'] || ENV['USER'] %>
+  password: <%= ENV['MY_PASSWORD'] %>
 
 development:
   <<: *default
