--- a/test/fixtures/participations.yml
+++ b/test/fixtures/participations.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: participations
+#
+#  id              :integer          not null, primary key
+#  single_room     :boolean          default(FALSE)
+#  user_id         :integer          not null
+#  event_id        :integer          not null
+#  accomodation_id :integer
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
