Makes join table and renames Accomodation to the correct Accommodation

--- a/test/fixtures/participations.yml
+++ b/test/fixtures/participations.yml
@@ -17,10 +17,10 @@ one:
   single_room: false
   user: one
   event: one
-  accomodation: one
+  accommodation: one
 
 two:
   single_room: false
   user: two
   event: two
-  accomodation: two
+  accommodation: two
