--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ config/secrets.yml
 
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
-.env
+.env*
 
 ## Environment normalization:
 /.bundle
