--- a/test/fixtures/accommodations.yml
+++ b/test/fixtures/accommodations.yml
@@ -6,6 +6,7 @@
 #  number_of_beds :integer
 #  created_at     :datetime         not null
 #  updated_at     :datetime         not null
+#  event_id       :integer          not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
