--- a/.erdconfig
+++ b/.erdconfig
@@ -8,7 +8,7 @@ filetype: pdf
 indirect: true
 inheritance: false
 markup: true
-notation: simple
+notation: bachman
 orientation: vertical
 polymorphism: false
 sort: true
