Adds bower-rails; updates events form

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,6 +7,8 @@
 #  email      :text             not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  role       :integer          default("participant"), not null
+#  gender     :integer          default("unspecified"), not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
