--- a/example.env
+++ b/example.env
@@ -1,3 +1,5 @@
+# Define the Postgres user if not using the default (ie your username)
+#MY_USER=postgres
 CROWD_APP_NAME=conference-commander
 CROWD_APP_PASSWORD=CorrectHorseBatteryStaple
 CROWD_ENDPOINT_URL=http://your-internal-crowd-server.example.com/crowd
