--- a/test/fixtures/schedules.yml
+++ b/test/fixtures/schedules.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: schedules
+#
+#  id         :integer          not null, primary key
+#  start_at   :datetime
+#  end_at     :datetime
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
