--- a/test/fixtures/tracks.yml
+++ b/test/fixtures/tracks.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: tracks
+#
+#  id          :integer          not null, primary key
+#  start_at    :datetime
+#  end_at      :datetime
+#  schedule_id :integer
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
