--- a/test/fixtures/venues.yml
+++ b/test/fixtures/venues.yml
@@ -2,11 +2,13 @@
 #
 # Table name: venues
 #
-#  id         :integer          not null, primary key
-#  name       :string
-#  event_id   :integer
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id          :integer          not null, primary key
+#  name        :string
+#  event_id    :integer
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  description :text
+#  capacity    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
