Adding Procfile for running both dev servers using Hivemind

--- a/example.env
+++ b/example.env
@@ -1,5 +1,7 @@
-# Define the Postgres user if not using the default (ie your username)
-#MY_USER=postgres
+# The Postgres user for the db connection
+MY_USER=postgres
+# The Crowd integration expects the following environment variables to be set:
 CROWD_APP_NAME=conference-commander
 CROWD_APP_PASSWORD=CorrectHorseBatteryStaple
 CROWD_ENDPOINT_URL=http://your-internal-crowd-server.example.com/crowd
+#SKIP_CROWD=true
