--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ pickle-email-*.html
 
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
-.env*
+.env
 
 ## Environment normalization:
 /.bundle
