--- a/example.env
+++ b/example.env
@@ -4,4 +4,8 @@ MY_USER=postgres
 CROWD_APP_NAME=conference-commander
 CROWD_APP_PASSWORD=CorrectHorseBatteryStaple
 CROWD_ENDPOINT_URL=http://your-internal-crowd-server.example.com/crowd
-#SKIP_CROWD=true
+LDAP_HOST="127.0.0.1"
+LDAP_USERNAME="CN=Example,OU=Example,OU=Example,DC=example,DC=example"
+LDAP_PASSWORD="password"
+LDAP_TREEBASE="OU=example,dc=example,dc=example"
+
