Activate LDAP integration in production only

--- a/example.env
+++ b/example.env
@@ -1,11 +1,13 @@
 # The Postgres user for the db connection
 MY_USER=postgres
+
 # The Crowd integration expects the following environment variables to be set:
 CROWD_APP_NAME=conference-commander
 CROWD_APP_PASSWORD=CorrectHorseBatteryStaple
 CROWD_ENDPOINT_URL=http://your-internal-crowd-server.example.com/crowd
+
+# Normally the LDAP integration is only active in production. If you want to test it in development, ask someone in Drift.
 LDAP_HOST="127.0.0.1"
 LDAP_USERNAME="CN=Example,OU=Example,OU=Example,DC=example,DC=example"
 LDAP_PASSWORD="password"
 LDAP_TREEBASE="OU=example,dc=example,dc=example"
-
